fix: slider had a gap between the wrappers

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -578,13 +578,12 @@ p {
     list-style: none;
     gap: 2rem;
     margin: 0;
-    padding: 0 1rem;
+    padding: 0;
 
     animation: scrollToRight 20s linear infinite;
 
     @media (max-width: 768px) {
       gap: 1rem;
-      padding: 0 0.5rem;
     }
   }
 
